# libtracefs

./: .gitignore  Makefile  README  check-manpages.sh  libtracefs.pc.template  meson.build  meson_options.txt  test.c  tracefs-events.c
Documentation/: .gitignore  Makefile  libtracefs-cpu-buf.txt  libtracefs-cpu-map.txt  libtracefs-cpu-open.txt  libtracefs-cpu.txt  libtracefs-dynevents.txt  libtracefs-eprobes.txt  libtracefs-error.txt  libtracefs-events-file.txt  libtracefs-events-tep.txt  libtracefs-events.txt  libtracefs-files.txt  libtracefs-filter-pid.txt  libtracefs-filter.txt  libtracefs-function-filter.txt  libtracefs-guest.txt  libtracefs-hist-cont.txt  libtracefs-hist-data-2.txt  libtracefs-hist-data.txt  libtracefs-hist-mod.txt  libtracefs-hist.txt  libtracefs-instances-affinity.txt  libtracefs-instances-file-manip.txt  libtracefs-instances-files.txt  libtracefs-instances-manage.txt  libtracefs-instances-stat.txt  libtracefs-instances-subbuf.txt  libtracefs-instances-utils.txt  libtracefs-iterator.txt  libtracefs-kprobes.txt  libtracefs-log.txt  libtracefs-marker.txt  libtracefs-marker_raw.txt  libtracefs-option-bits.txt  libtracefs-option-get.txt  libtracefs-option-misc.txt  libtracefs-options.txt  libtracefs-snapshot.txt  libtracefs-sql.txt  (+11 more)
include/: meson.build  tracefs-local.h  tracefs.h
samples/: Makefile  cpu-map.c  extract-example.sh  meson.build
scripts/: utils.mk
src/: Makefile  meson.build  sqlhist-lex.c  sqlhist-parse.h  sqlhist.l  sqlhist.tab.c  sqlhist.tab.h  sqlhist.y  tracefs-dynevents.c  tracefs-eprobes.c  tracefs-events.c  tracefs-filter.c  tracefs-hist-data.c  tracefs-hist.c  tracefs-instance.c  tracefs-kprobes.c  tracefs-marker.c  tracefs-mmap.c  tracefs-perf.c  tracefs-record.c  tracefs-sqlhist.c  tracefs-stats.c  tracefs-tools.c  tracefs-uprobes.c  tracefs-utils.c  tracefs-vsock.c
utest/: Makefile  README  meson.build  trace-utest.c  tracefs-utest.c
